--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 
 app_user_db_settings.env
 db_service_settings.env
-prod_config.yml
-dev_config.yml
+prod_config.env
+dev_config.env
+packet_config.env
 
 bin/
 
