removed double packet save failure message added debug lines to dockerfile switched to using env only files in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     ports:
       - "8000:8000"
     restart: unless-stopped
+    env_file:
+      - prod_config.env
+      - packet_config.env
+      - app_user_db_settings.env
 
 
 volumes:
