--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,34 @@
+# run with -f docker-compose.dev.yml --env-file dev_config.env
 version: "3.7"
 services:
   box_listener:
-    image: tmp
+    container_name: box_listener
+    image: senyehor/packet_listener:debug_latest
     expose:
-      - 9000
-
-  nginx:
-    container_name: nginx
-    image: my_nginx
-    ports:
-      - "8000:9000"
+      - "${APP_PORT}"
+    env_file:
+      - dev_config.env
+      - packet_config.env
     restart: unless-stopped
+
+  database:
+    container_name: db
+    image: postgres:11
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_PASSWORD="${DB_PASSWORD}"
+    volumes:
+      - "db_data:/var/lib/postgresql/data"
+
+  #  nginx:
+  #    container_name: nginx
+  #    build:
+  #      context: ./
+  #      dockerfile: nginx.dockerfile
+  #    ports:
+  #      - "8000:8000"
+  #    restart: unless-stopped
+
+volumes:
+  db_data:
