--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - "db_data:/var/lib/postgresql/data"
     restart: unless-stopped
+    expose:
+      - 5432
 
   box_listener:
     container_name: box_listener
@@ -15,8 +17,8 @@ services:
     ports:
       - "9000:9000"
     env_file:
-      - dev_config.env
-      - packet_config.env
+      - envs.d/dev_config.env
+      - envs.d/packet_config.env
     restart: unless-stopped
 
   #  nginx:
