--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,13 +7,13 @@ services:
     env_file:
       - envs.d/db_service_settings.env
     volumes:
-      - app_pg_data:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
     expose:
       - 5432
 
   box_listener:
     container_name: box_listener
-    image: senyehor/packet_listener:latest
+    image: senyehor/box_listener:latest
     depends_on:
       - db
     env_file:
@@ -25,4 +25,7 @@ services:
       - "8000:9000"
 
 volumes:
-  app_pg_data:
+  pg_data:
+
+networks:
+  energokodros:
